argocd/mealie/deploy-mealie.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.5.0
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: mealie-data
          mountPath: /app/data
        limits:
          memory: "512Mi"
        environment:
          - name: ALLOW_SIGNUP
            value: true
          - name: TZ
            value: "Europe/London"
          - name: BASE_URL
            value: "https://mealie.projectkube.com"
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-claim  # Name of your PVC

---

apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
  - protocol: TCP
    port: 9000  # The port your service will expose
    targetPort: 9000  # The port the container is listening on
  type: NodePort
