argocd/mealie/ingress-mealie.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.projectkube.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
